...

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_city_name"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
...

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_large_weather_icon"
            android:layout_width="153dp"
            android:layout_height="125dp"
...

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_main_temp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_min_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_weahter_discription"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
...

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_day1"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
...
            android:textColor="@color/colorAccent"
            android:textSize="17sp"
            app:layout_constraintEnd_toStartOf="@+id/tv_day2"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/tv_mid_line" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_min_max_temp1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/iv_small_weather_icon1"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/iv_small_weather_icon1"
...
            android:textColor="@color/colorAccent"
            android:textSize="17sp"
            app:layout_constraintEnd_toStartOf="@+id/tv_day3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_day1"
...

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_min_max_temp2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/iv_small_weather_icon2"
            app:layout_constraintStart_toStartOf="@+id/iv_small_weather_icon2"
            app:layout_constraintTop_toBottomOf="@+id/iv_small_weather_icon2" />
...
            android:textColor="@color/colorAccent"
            android:textSize="17sp"
            app:layout_constraintEnd_toStartOf="@+id/tv_day4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_day2"
...

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_min_max_temp3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/iv_small_weather_icon3"
            app:layout_constraintStart_toStartOf="@+id/iv_small_weather_icon3"
            app:layout_constraintTop_toBottomOf="@+id/iv_small_weather_icon3" />
...
            android:textColor="@color/colorAccent"
            android:textSize="17sp"
            app:layout_constraintEnd_toStartOf="@+id/tv_day5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_day3"
...

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_min_max_temp4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/iv_small_weather_icon4"
            app:layout_constraintStart_toStartOf="@+id/iv_small_weather_icon4"
            app:layout_constraintTop_toBottomOf="@+id/iv_small_weather_icon4" />
...

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_min_max_temp5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/iv_small_weather_icon5"
            app:layout_constraintStart_toStartOf="@+id/iv_small_weather_icon5"
            app:layout_constraintTop_toBottomOf="@+id/iv_small_weather_icon5" />
...
        <androidx.appcompat.widget.AppCompatTextView
            android:visibility="@{state.failure?View.VISIBLE:View.GONE}"
            android:id="@+id/tvErrorMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/retry"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...
