...
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/tv_enter_city"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/enter_city_name"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline_left" />

        <androidx.appcompat.widget.AppCompatEditText
            android:textColor="@color/colorAccent"
...
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="200dp"
            android:backgroundTint="#FFFFFF"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/openWeatherForecast"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/guideline_left" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/openWeatherForecast"
            android:layout_width="46dp"
...
